# crytpo-splash

./: Cargo.toml  readme.md
crates/crypto-get/: Cargo.toml
crates/crypto-get/src/: lib.rs
crates/crypto-print/: Cargo.toml
crates/crypto-print/src/: lib.rs
src/: main.rs
src/get/: mod.rs
src/print/: mod.rs
