[package]
name = "crypto-splash"
version = "0.1.0"
edition = "2021"
authors = ["Jason Hamm <jasonhamm.me@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to view crypto via terminal"
readme = "README.md"
homepage = "https://github.com/mjhamm75/crytpo-splash"
repository = "https://github.com/mjhamm75/crytpo-splash"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4.5"
env_logger = "0.9.0"
structopt = { version = "0.3", default-features = false }
serde = { version = "1.0.132", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
prettytable-rs = "^0.8"
thousands = "0.2.0"